    - Recipes for Lithium and Lithium perchlorate were showing Bob's electroliser in FNEI #224
    - Garden duplication recipes were requiring T2 farms #225
    - Calcium carbonate is now made in an Assembling machine rather than a Liquifier #220
    - Heat unusable at green science #233
    - Bob's Vehicle Equipment mod techs required disabled science packs #231
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 11.09.2021
  Changes:
    - Disabled Resin to Rubber recipe
    - Rebalanced Insulated wire recipe to increase rubber consumption
    - Removed Glass smelting 1 as prerequisite for Sniper Rifle
    - Reduced Electrolyser volume
    - Rebalanced Glass mixture recipes
    - Rebalanced Cement recipes
    - Added Brass and Invar smelting as prerequisites for Military science (with SCT)
    - Hid overwritten settings from Bob's Logistics
    - Standardized concrete walk speed bonuses
    - Moved Dinitrogen tetroxide gas recipe to chemical plant and added yellow metal catalyst
  Bugfixes:
    - Fixed startup error with Mad Clown's mods enabled
    - Hid gunmetal item, recipes, and tech
    - Fixed that basic steel smelting was half price
    - Removed fuel value from diesel so it would not show in helper mods
    - Fixed duplicate hazard concrete unlocks
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 14.08.2021
  Changes:
    - Re-enable early glass recipe as Arboretum now require glass
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 14.08.2021
  Changes:
    - Reverted default settings override of Bob's Adjustable Inserters mod
    - Made Long Inserters ignore tech cost modifier
    - Streamlined hand crafting of wood pellets and boards
    - Standardized terrain vehicle speed
    - Refund all landfill when painting over sand islands